[gd_scene load_steps=6 format=3 uid="uid://c53ury7a1l5hy"]

[ext_resource type="Script" uid="uid://b8kivkhxk8iry" path="res://src/UI/ClickBar/click_bar_display.gd" id="1_b50l3"]
[ext_resource type="PackedScene" uid="uid://bpuce5l5l1hkb" path="res://src/UI/ClickBar/click_bar.tscn" id="2_50t8o"]
[ext_resource type="PackedScene" uid="uid://cidffowwto0oy" path="res://src/ValueLabel/value_label.tscn" id="3_50t8o"]
[ext_resource type="PackedScene" uid="uid://ckhoyokjub8ut" path="res://src/UI/ProgressionBar/distribution_bar.tscn" id="3_iyp3o"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iyp3o"]
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="ClickBarDisplay" type="VBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
alignment = 1
script = ExtResource("1_b50l3")

[node name="CPSContainer" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="CPS" parent="CPSContainer" instance=ExtResource("3_50t8o")]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
value = 0.0
text = "CPS: "
font_size = 26

[node name="DistributionBar" parent="CPSContainer" instance=ExtResource("3_iyp3o")]
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_iyp3o")

[node name="ClickBar" parent="." instance=ExtResource("2_50t8o")]
layout_mode = 2

[node name="CyclesContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="RequiredClicks" parent="CyclesContainer" instance=ExtResource("3_50t8o")]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
value = 3.0
text = "Required Clicks: "

[node name="Cycles" parent="CyclesContainer" instance=ExtResource("3_50t8o")]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
value = 0.0
text = "Cycles: "
